fix SSR CSR problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -124,6 +124,13 @@ html {
 /* approximately set up the layout of header, footer and main */
 /**************************************************************/
 
+.layout-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 body {
   display: flex;
   flex-direction: column;
