--- a/src/css/style.css
+++ b/src/css/style.css
@@ -641,10 +641,12 @@ body {
   padding-top: var(--len-5);
 }
 
-.pagination a {
+.pagination button {
   display: inline-block;
 
   font-size: var(--font-size-2);
+
+  border: none;
 
   border-radius: var(--len-5);
   width: var(--len-5);
@@ -662,11 +664,11 @@ body {
   transition: background-color 0.25s;
 }
 
-.pagination a:hover {
+.pagination button:hover {
   background-color: var(--color-bg-pager-hover);
 }
 
-.pagination a.current {
+.pagination button.current {
   background-color: var(--color-bg-pager-current);
   pointer-events: none;
   color: var(--color-fg-font-normal);
